--- a/mlsscraper.ipynb
+++ b/mlsscraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "412ed7af",
    "metadata": {},
    "outputs": [],
@@ -10,37 +10,54 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "from datetime import datetime"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afaa0869",
+   "metadata": {},
+   "source": [
+    "Initialize a DataFrame to store web scraped data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "8ca0e22b",
    "metadata": {},
    "outputs": [],
    "source": [
     "re_df = pd.DataFrame().assign(Raw_Price=[], Raw_Beds=[], Raw_Baths=[], \n",
     "                     Raw_Square_Feet=[], Raw_Year_Built=[], Raw_Garages=[], \n",
-    "                     Raw_Lot_SqFt=[], Raw_Date_Sold=[], Raw_Days_On_Market=[])\n",
-    "months_dict = {'Jan': '01', 'Feb': '02', 'Mar': '03', 'Apr': '04', 'May': '05', 'Jun': '06', 'Jul': '07', \n",
-    "               'Aug': '08', 'Sep': '09', 'Oct': '10', 'Nov': '11', 'Dec': '12'}"
+    "                     Raw_Lot_SqFt=[], Raw_Date_Sold=[], Raw_Days_On_Market=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3afa9b3b",
+   "metadata": {},
+   "source": [
+    "## Web Scraping\n",
+    "Scrape MLS data from [mlslistings.com](https://www.mlslistings.com). Loop through all pages of properties that have sold in Folsom in the past year, collecting on different house characteristics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "7e807ce4",
+   "execution_count": null,
+   "id": "51e1cd16",
    "metadata": {},
    "outputs": [],
    "source": [
     "i = 1\n",
     "while i:\n",
-    "    url = f'https://www.mlslistings.com/Search/Result/6c8ec8db-d99b-4466-9bb2-f40f3593e7de/{i}'\n",
+    "    url = f'https://www.mlslistings.com/Search/Result/8ca51c7a-f3b6-4f02-b070-1d0abf2168f7/{i}'\n",
     "    page = requests.get(url)\n",
-    "    driver = webdriver.Chrome()\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "    driver.get(url)\n",
     "    soup = BeautifulSoup(driver.page_source)\n",
     "    try:\n",
@@ -66,45 +83,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "d0be63eb",
+   "execution_count": null,
+   "id": "8459d0c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    re_df['Price'] = [int(x.replace('$','').replace(',','')) for x in re_df['Raw_Price']]\n",
-    "    re_df['Baths'] = [float(x.replace('\\n','').replace('/','.').replace('Ba', '')) for x in re_df['Raw_Baths']]\n",
-    "    re_df['Beds'] = [int(x.replace('\\n','').replace('Bd','')) for x in re_df['Raw_Beds']]\n",
-    "    re_df['Square_Feet'] = [int(x.replace('\\n','').replace('Sq Ft','').replace(',','')) for x in \n",
-    "                            re_df['Raw_Square_Feet']]\n",
-    "    re_df['Year_Built'] = [int(x.replace('\\n', '').replace('Year Built', '')) for x in re_df['Raw_Year_Built']]\n",
-    "    re_df['Garages'] = [int(x.replace('\\n', '').replace('Garage', '')) for x in re_df['Raw_Garages']]\n",
-    "    re_df['Lot_SqFt'] = [int(x.replace('\\n','').replace('Sq Ft Lot','').replace(',','').replace('–','0')) if \n",
-    "                         'Sq Ft' in x else int(float(x.replace('\\n','').replace('Acres Lot','').replace(',','')\n",
-    "                                                     .replace('–','0')) * 45360) for x in re_df['Raw_Lot_SqFt']]\n",
-    "    re_df['Date_Sold'] = [f'{months_dict[x[0]]}/{x[1]}/{x[2]}' if len(x[1]) == 2 else \n",
-    "                          f'{months_dict[x[0]]}/0{x[1]}/{x[2]}'for x in [y.replace('Sold on ','').replace(',','')\n",
-    "                                                                         .split() for y in re_df['Raw_Date_Sold']]]\n",
-    "    re_df['Days_On_Market'] = [int(x.strip(' Days on Site')) for x in re_df['Raw_Days_On_Market']]\n",
-    "    re_df = re_df.drop(columns=['Raw_Price','Raw_Beds','Raw_Baths','Raw_Square_Feet','Raw_Year_Built',\n",
-    "                                'Raw_Garages','Raw_Lot_SqFt','Raw_Date_Sold','Raw_Days_On_Market'])\n",
-    "except:\n",
-    "    pass"
+    "re_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3caad806",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning\n",
+    "Remove unnecessary non-number characters from data set, convert number strings into ints and floats, convert measurements in acres to square feet, change data sold into numeric date format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "c19da6c2",
+   "execution_count": null,
+   "id": "79302bd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "re_df.to_csv(f'mlssales{datetime.now().strftime(\"%y-%m-%d\")}.csv')"
+    "re_df['Price'] = [int(x.replace('$','').replace(',','')) for x in re_df['Price']]\n",
+    "re_df['Baths'] = [float(x.replace('\\n','').replace('/','.').replace('Ba', '')) for x in re_df['Baths']]\n",
+    "re_df['Beds'] = [int(x.replace('\\n','').replace('Bd','')) for x in re_df['Beds']]\n",
+    "re_df['Square_Feet'] = [int(x.replace('\\n','').replace('Sq Ft','').replace(',','')) for x in \n",
+    "                        re_df['Square_Feet']]\n",
+    "re_df['Year_Built'] = [int(x.replace('\\n', '').replace('Year Built', '')) for x in re_df['Year_Built']]\n",
+    "re_df['Garages'] = [int(x.replace('\\n', '').replace('Garage', '')) for x in re_df['Garages']]\n",
+    "re_df['Lot_SqFt'] = [int(x.replace('\\n','').replace('Sq Ft Lot','').replace(',','').replace('–','0')) if \n",
+    "                     'Sq Ft' in x else int(float(x.replace('\\n','').replace('Acres Lot','').replace(',','')\n",
+    "                                                 .replace('–','0')) * 45360) for x in re_df['Lot_SqFt']]\n",
+    "re_df['Date_Sold'] = [f'{months_dict[x[0]]}/{x[1]}/{x[2]}' if len(x[1]) == 2 else \n",
+    "                      f'{months_dict[x[0]]}/0{x[1]}/{x[2]}'for x in [y.replace('Sold on ','').replace(',','')\n",
+    "                                                                     .split() for y in re_df['Date_Sold']]]\n",
+    "re_df['Days_On_Market'] = [int(x.strip(' Days on Site')) for x in re_df['Days_On_Market']]\n",
+    "re_df = re_df.reset_index()\n",
+    "# Many brand new homes do not add a year built to the MLS data, which results the year built being recorded as 0.\n",
+    "# To fix this, the year built of homes with this problem is changed to the year the house sold.\n",
+    "re_df['Year_Built'] = [int(re_df['Date_Sold'][i][-4:]) if re_df['Year_Built'][i] == 0 else \n",
+    "                       re_df['Year_Built'][i] for i in range(re_df.shape[0])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c52d5cc",
+   "metadata": {},
+   "source": [
+    "Data now looks ready to be analyzed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "f48ae480",
    "metadata": {},
    "outputs": [
@@ -129,6 +163,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>Price</th>\n",
        "      <th>Baths</th>\n",
        "      <th>Beds</th>\n",
@@ -143,63 +178,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>800000</td>\n",
        "      <td>3.0</td>\n",
        "      <td>4</td>\n",
-       "      <td>2889</td>\n",
-       "      <td>2003</td>\n",
+       "      <td>2350</td>\n",
+       "      <td>1999</td>\n",
        "      <td>3</td>\n",
-       "      <td>8786</td>\n",
-       "      <td>07/14/2023</td>\n",
-       "      <td>39</td>\n",
+       "      <td>7518</td>\n",
+       "      <td>08/28/2023</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>640000</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1867</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4792</td>\n",
-       "      <td>07/14/2023</td>\n",
-       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>840000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2319</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8695</td>\n",
+       "      <td>08/28/2023</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>999000</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>685000</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>4</td>\n",
-       "      <td>3103</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>1989</td>\n",
        "      <td>3</td>\n",
-       "      <td>7339</td>\n",
-       "      <td>07/12/2023</td>\n",
-       "      <td>86</td>\n",
+       "      <td>7932</td>\n",
+       "      <td>08/28/2023</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>862000</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2680</td>\n",
-       "      <td>1999</td>\n",
        "      <td>3</td>\n",
-       "      <td>8133</td>\n",
-       "      <td>07/11/2023</td>\n",
-       "      <td>44</td>\n",
+       "      <td>575000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1198</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5144</td>\n",
+       "      <td>08/28/2023</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>630000</td>\n",
-       "      <td>2.1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>840000</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>1888</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4147</td>\n",
-       "      <td>07/11/2023</td>\n",
-       "      <td>73</td>\n",
+       "      <td>2306</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14651</td>\n",
+       "      <td>08/28/2023</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -212,103 +252,109 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>685000</td>\n",
+       "      <th>725</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1250000</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4216</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12111</td>\n",
+       "      <td>08/30/2022</td>\n",
+       "      <td>441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1125000</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3102</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18370</td>\n",
+       "      <td>08/30/2022</td>\n",
+       "      <td>417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>727</th>\n",
+       "      <td>14</td>\n",
+       "      <td>772000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2335</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4996</td>\n",
+       "      <td>08/30/2022</td>\n",
+       "      <td>476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>728</th>\n",
+       "      <td>15</td>\n",
+       "      <td>558000</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1803</td>\n",
-       "      <td>2004</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>1999</td>\n",
        "      <td>2</td>\n",
-       "      <td>7971</td>\n",
-       "      <td>04/18/2023</td>\n",
-       "      <td>114</td>\n",
+       "      <td>4356</td>\n",
+       "      <td>08/30/2022</td>\n",
+       "      <td>389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>740000</td>\n",
+       "      <th>729</th>\n",
+       "      <td>16</td>\n",
+       "      <td>738517</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2504</td>\n",
-       "      <td>2005</td>\n",
+       "      <td>2228</td>\n",
+       "      <td>2022</td>\n",
        "      <td>2</td>\n",
-       "      <td>8028</td>\n",
-       "      <td>04/18/2023</td>\n",
-       "      <td>184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1200000</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2962</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9265</td>\n",
-       "      <td>04/17/2023</td>\n",
-       "      <td>136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>625000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1327</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6199</td>\n",
-       "      <td>04/17/2023</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>760000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1687</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9814</td>\n",
-       "      <td>04/17/2023</td>\n",
-       "      <td>156</td>\n",
+       "      <td>4247</td>\n",
+       "      <td>08/30/2022</td>\n",
+       "      <td>418</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 9 columns</p>\n",
+       "<p>730 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Price  Baths  Beds  Square_Feet  Year_Built  Garages  Lot_SqFt  \\\n",
-       "0   1000000    3.0     4         2889        2003        3      8786   \n",
-       "1    640000    2.1     2         1867        1990        2      4792   \n",
-       "2    999000    3.0     4         3103        2018        3      7339   \n",
-       "3    862000    2.1     4         2680        1999        3      8133   \n",
-       "4    630000    2.1     3         1888        2014        2      4147   \n",
-       "..      ...    ...   ...          ...         ...      ...       ...   \n",
-       "9    685000    2.0     2         1803        2004        2      7971   \n",
-       "10   740000    3.0     3         2504        2005        2      8028   \n",
-       "11  1200000    3.1     3         2962        2005        3      9265   \n",
-       "12   625000    2.0     3         1327        2000        2      6199   \n",
-       "13   760000    2.0     3         1687        2005        3      9814   \n",
+       "     index    Price  Baths  Beds  Square_Feet  Year_Built  Garages  Lot_SqFt  \\\n",
+       "0        0   800000    3.0     4         2350        1999        3      7518   \n",
+       "1        1   840000    3.0     4         2319        1996        3      8695   \n",
+       "2        2   685000    2.0     4         2002        1989        3      7932   \n",
+       "3        3   575000    2.0     3         1198        1993        2      5144   \n",
+       "4        4   840000    3.0     3         2306        1989        3     14651   \n",
+       "..     ...      ...    ...   ...          ...         ...      ...       ...   \n",
+       "725     12  1250000    3.1     5         4216        2006        8     12111   \n",
+       "726     13  1125000    2.1     4         3102        1983        3     18370   \n",
+       "727     14   772000    3.0     4         2335        2019        2      4996   \n",
+       "728     15   558000    2.0     2         1245        1999        2      4356   \n",
+       "729     16   738517    3.0     3         2228        2022        2      4247   \n",
        "\n",
-       "     Date_Sold  Days_On_Market  \n",
-       "0   07/14/2023              39  \n",
-       "1   07/14/2023              30  \n",
-       "2   07/12/2023              86  \n",
-       "3   07/11/2023              44  \n",
-       "4   07/11/2023              73  \n",
-       "..         ...             ...  \n",
-       "9   04/18/2023             114  \n",
-       "10  04/18/2023             184  \n",
-       "11  04/17/2023             136  \n",
-       "12  04/17/2023             116  \n",
-       "13  04/17/2023             156  \n",
+       "      Date_Sold  Days_On_Market  \n",
+       "0    08/28/2023              47  \n",
+       "1    08/28/2023              26  \n",
+       "2    08/28/2023              25  \n",
+       "3    08/28/2023              25  \n",
+       "4    08/28/2023              33  \n",
+       "..          ...             ...  \n",
+       "725  08/30/2022             441  \n",
+       "726  08/30/2022             417  \n",
+       "727  08/30/2022             476  \n",
+       "728  08/30/2022             389  \n",
+       "729  08/30/2022             418  \n",
        "\n",
-       "[200 rows x 9 columns]"
+       "[730 rows x 10 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +369,9 @@
    "id": "6a6981a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "re_df.to_csv(f'mlssales{datetime.now().strftime(\"%y-%m-%d\")}.csv')"
+   ]
   }
  ],
  "metadata": {
